bin/testsuite/tests/compiler/src/errors/compiler4944.swg
#global testerror "Err0419"

enum : s32
{

}